# bls-hsm

./: .gitignore  .gitmodules  PRUEBA  README.md  blst.patch  build.sh  build_blst.sh  build_cli-socket.sh  build_emu.sh  build_libs.sh  build_remote_c.sh  dependencies.sh  flash.sh  go.mod  go.sum  jsonExample.c  keystore.json  linux_dependencies.sh  setup.sh
cli/: CMakeLists.txt  README.md  prj.conf
cli-socket/: main.c
cli/include/: bls_hsm.c  bls_hsm.h  common.c  common.h  commonBoard.h  httpRemote.h
cli/src/: main.c  secure_partition_interface.c  secure_partition_interface.h  utils.c
cli/test/: utils.go
emu/: build.sh  client.c  httpRemote.h  main.c  mainsec.c  utils.c
include/: bls_hsm.c  httpRemote.h
json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  install_manifest.txt  json-c.pc  libjson-c.so.5.1.0
json-c-build/Testing/Temporary/: CTestCostData.txt
json-c-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake  json_parse
json-c-build/doc/: CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
json-c-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test1Formatted  test2  test2Formatted  test4  testReplaceExisting  test_cast  test_charcase  test_compare  test_deep_copy  test_double_serializer  test_float  test_int_add  test_json_pointer  test_locale  test_null  test_object_iterator  test_parse  test_parse_int64  test_printbuf  test_set_serializer  test_set_value  test_strerror  test_util_file  test_visit
keystoredecrypt/: build_import_keystore.sh  import_keystore.c  import_keystore.h
lib/: aes.c  aes.h  bls_hsm.c  bls_hsm.h  bls_hsm_ns.c  bls_hsm_ns.h  common.c  common.h  e1.c  e2.c  httpRemote.h  merkleization.h  secure_partition.c  secure_partition.h  secure_partition_interface.c  secure_partition_interface.h  tcp.c  tcp.h  tfm_bls_hsm_ns.c  touchpad_manager.c  touchpad_manager.h  touchscreen.c  touchscreen.h  vect.h
remote/: main.go
remote-c/: client.c  httpRemote.h  main.c
remote-go/: README.MD  README.rst  main.go
remote-signer/: CMakeLists.txt  Kconfig  README.md  README.rst  bridge.go  nrf7002dk_nrf5340_cpuapp.overlay  prj.conf  sample.yaml  socket.conf  usb.conf
remote-signer-7002/: CMakeLists.txt  README.md  bridge.go  display.conf  prj.conf  socket.conf
remote-signer-7002/test_rs/: rs_test.go  rs_user_interface.js
remote-signer/src/: main.c
remote-signer/test_rs/: rs_test.go  rs_user_interface.css  rs_user_interface.html  rs_user_interface.js
remote_signer/: CMakeLists.txt  bridge.go  prj.conf
remote_signer/src/: main.c
samples/: aggregate_and_proof.json  aggregation_slot.json  block.json
samples/artifacts/: attestation.json  bblock.json  bblockslash.json
samples/eip2335/: keystore_pbkdf2_test.json  keystore_request.json
samples/keystores/: weak-keystore-2.json  weak-keystore.json
secure_module/zephyr/: CMakeLists.txt  module.yml
secure_module/zephyr/spm/: CMakeLists.txt  README.rst  nrf5340dk_nrf5340_cpuapp.overlay  nrf9160dk_nrf9160.overlay  pm.yml  prj.conf  sample.yaml
secure_module/zephyr/spm/boards/: nrf5340dk_nrf5340_cpuapp.conf
secure_module/zephyr/spm/src/: main.c
secure_partition/: CMakeLists.txt  README.md  secure_partition.c  tfm_manifest_list.yaml.in  tfm_secure_partition.yaml
shell_module/: CMakeLists.txt  prj.conf
shell_module/build_nrf5340dk_nrf5340_cpuappns/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  partitions.yml  pm.config  rules.ninja  shell_module.emProject  shell_module.emSession  zephyr_modules.txt
shell_module/build_nrf5340dk_nrf5340_cpuappns/Kconfig/: Kconfig.shield  Kconfig.soc
shell_module/build_nrf5340dk_nrf5340_cpuappns/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  shared_vars.cmake
shell_module/build_nrf5340dk_nrf5340_cpuappns/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  merged.hex  runners.yaml  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
shell_module/build_nrf9160dk_nrf9160ns/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  rules.ninja  shell_module.emProject  shell_module.emSession
shell_module/build_nrf9160dk_nrf9160ns/Kconfig/: Kconfig.modules
shell_module/build_nrf9160dk_nrf9160ns/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  shared_vars.cmake
shell_module/build_nrf9160dk_nrf9160ns/zephyr/: .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_pass_final.cmd.dep  merged.hex  nrf9160dk_nrf9160ns.dts.pre.tmp  runners.yaml  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
shell_module/src/: main.c
shell_module_basic/: CMakeLists.txt  prj.conf
shell_module_basic/build_nrf5340dk_nrf5340_cpuappns/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  pm.config  regions.yml  rules.ninja  shell_module_basic.emProject  shell_module_basic.emSession  zephyr_modules.txt  zephyr_settings.txt
shell_module_basic/build_nrf9160dk_nrf9160ns/: .ninja_log  CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  partitions.yml  pm.config  rules.ninja  shell_module_basic.emProject  shell_module_basic.emSession
shell_module_basic/src/: main.c  vect.h
sv/: main.go
test/: go.mod  go.sum  main.go  main.js  package-lock.json  package.json  private.go  utils.go
test/eip2335/: keystore-m_12381_3600_0_0_0-1638363930.json  keystore-m_12381_3600_0_0_0-1642162977.json  keystore_request.json
test/web3/: keystore-m_12381_3600_0_0_0-1638363930.json  keystore-m_12381_3600_0_0_0-1642162977.json
test_rs/: rs_test.go
tools/: build.sh  flash.sh  scrypt2pbkdf.py
ui/lvgl/: CMakeLists.txt  prj.conf
ui/lvgl/src/: main.c
(+480 files in other folders)
